--- a/MyDwellworks/Web.config
+++ b/MyDwellworks/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;AttachDbFilename=|DataDirectory|\MyDwellworks.mdf;Initial Catalog=MyDwellworks;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDb;AttachDbFilename=|DataDirectory|\MyDwellworks.mdf;Initial Catalog=MyDwellworks;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
