Add user role constants, and manager users link for GSC

--- a/MyDwellworks.Data/MyDwellworks.Data.csproj
+++ b/MyDwellworks.Data/MyDwellworks.Data.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Models\ApplicationUser.cs" />
+    <Compile Include="Core\Models\UserRoles.cs" />
     <Compile Include="Persistence\ApplicationDbContext.cs" />
     <Compile Include="Persistence\Migrations\201708281308044_InitialMigration.cs" />
     <Compile Include="Persistence\Migrations\201708281308044_InitialMigration.Designer.cs">
