--- a/MyDwellworks.Tests/packages.config
+++ b/MyDwellworks.Tests/packages.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="6.1.1" targetFramework="net462" />
+  <package id="Castle.Core" version="4.1.1" targetFramework="net462" />
+  <package id="FluentAssertions" version="4.19.4" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net462" />
+  <package id="Moq" version="4.7.99" targetFramework="net462" />
   <package id="MSTest.TestAdapter" version="1.1.11" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net462" />
 </packages>
