--- a/Odin.Tests/packages.config
+++ b/Odin.Tests/packages.config
@@ -2,7 +2,10 @@
 <packages>
   <package id="AutoMapper" version="6.1.1" targetFramework="net462" />
   <package id="Castle.Core" version="4.1.1" targetFramework="net462" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
   <package id="FluentAssertions" version="4.19.4" targetFramework="net462" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net462" />
   <package id="Moq" version="4.7.99" targetFramework="net462" />
