Add more UI to order index view

--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -556,10 +556,10 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Account\UserManagement.cshtml" />
+    <Content Include="Views\Orders\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Orders\" />
     <Folder Include="Views\Transferees\" />
   </ItemGroup>
   <ItemGroup>
