--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -87,6 +87,10 @@
     <Compile Include="Persistence\Migrations\201708311715395_AddOrderTransfereeAndRentObjects.Designer.cs">
       <DependentUpon>201708311715395_AddOrderTransfereeAndRentObjects.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201709051444089_AddEstimatedArrivalToOrders.cs" />
+    <Compile Include="Persistence\Migrations\201709051444089_AddEstimatedArrivalToOrders.Designer.cs">
+      <DependentUpon>201709051444089_AddEstimatedArrivalToOrders.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
     <Compile Include="Persistence\UnitOfWork.cs" />
@@ -106,6 +110,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201708311715395_AddOrderTransfereeAndRentObjects.resx">
       <DependentUpon>201708311715395_AddOrderTransfereeAndRentObjects.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201709051444089_AddEstimatedArrivalToOrders.resx">
+      <DependentUpon>201709051444089_AddEstimatedArrivalToOrders.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
