--- a/Odin.Data/App.config
+++ b/Odin.Data/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Odin;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=tcp:odin-db.database.windows.net,1433;Initial Catalog=odin-db;User ID=Baldur;Password=HSI53sjf$"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <configSections>
