--- a/Odin.Data/App.config
+++ b/Odin.Data/App.config
@@ -1,13 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Odin;Integrated Security=True"
-         providerName="System.Data.SqlClient" />
-  </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <!--ssp-->
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Odin;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
+    
+    <!--ae-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Odin;Integrated Security=True"
+         providerName="System.Data.SqlClient" />-->
+    
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
