--- a/Odin/Web.config
+++ b/Odin/Web.config
@@ -9,7 +9,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Odin;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--ssp-->
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Odin;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
+
+    <!--ae-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Odin;Integrated Security=True"
+         providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
