--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\TransfereesController.cs" />
+    <Compile Include="Filters\AiHandleErrorAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
