--- a/Odin.Data/App.config
+++ b/Odin.Data/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<configSections>
+  <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=tcp:odin-db.database.windows.net,1433;Initial Catalog=odin-db;User ID=Baldur;Password=HSI53sjf$"
+    <add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Odin;Integrated Security=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
