Tokenize the azure db connection string

--- a/Odin/Web.Staging.config
+++ b/Odin/Web.Staging.config
@@ -16,7 +16,7 @@
   -->
   <connectionStrings>
     <add name="DefaultConnection"
-         connectionString="__AzureDBConnectionString__"
+         connectionString="#{AzureDBConnectionString}#"
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
 
   </connectionStrings>
