--- a/Odin/Web.Release.config
+++ b/Odin/Web.Release.config
@@ -14,6 +14,13 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <connectionStrings>
+    <add name="DefaultConnection"
+         connectionString="#{AzureDBConnectionString}#"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
