--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -113,6 +113,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="App.Release.config" />
+    <None Include="App.Staging.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
