--- a/Odin.IntegrationTests/packages.config
+++ b/Odin.IntegrationTests/packages.config
@@ -20,4 +20,5 @@
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net461" />
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net461" />
   <package id="NUnit" version="3.8.1" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
 </packages>
