Add release transform for integration tests config

--- a/Odin.IntegrationTests/Odin.IntegrationTests.csproj
+++ b/Odin.IntegrationTests/Odin.IntegrationTests.csproj
@@ -142,6 +142,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="App.Release.config" />
+    <None Include="App.Staging.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
