--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -238,6 +238,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\TransfereesController.cs" />
+    <Compile Include="Domain\OrderImporter.cs" />
     <Compile Include="Filters\AiHandleErrorAttribute.cs" />
     <Compile Include="Filters\ApiAuthorizeAttribute.cs" />
     <Compile Include="Filters\ValidationActionFilter.cs" />
@@ -246,6 +247,7 @@
     </Compile>
     <Compile Include="Helpers\ConfigHelper.cs" />
     <Compile Include="Interfaces\IConfigHelper.cs" />
+    <Compile Include="Interfaces\IOrderImporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\Authentication\AddPhoneNumberViewModel.cs" />
